Initial support for QuakeML output
Only Mw (average and per station) is written for the moment.

TODO:
- Mo
- fc
- other parameters?

--- a/sourcespec/configspec.conf
+++ b/sourcespec/configspec.conf
@@ -257,3 +257,9 @@ plot_station_text_size = float(default=8)
 # based on the map size)
 plot_map_tiles_zoom_level = integer(default=None)
 # -------- PLOT PARAMETERS
+
+
+# QUAKEML PARAMETERS ----------------
+author = string(default=None)
+agency_id = string(default=None)
+# -----------------QUAKEML PARAMETERS
